--- a/MockProject-ReactJS/package.json
+++ b/MockProject-ReactJS/package.json
@@ -16,7 +16,12 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@ant-design/cssinjs": "^1.21.0",
+    "antd": "^5.19.4",  
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
