--- a/MockProject-ReactJS/package.json
+++ b/MockProject-ReactJS/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "zod": "^3.23.8"
