--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,3 +13,13 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+jwt:
+  key:
+    access-token:
+      private-key: D:\Workspace\java\bodyguards_us\certs\access_token\private-key.pem
+      public-key: D:\Workspace\java\bodyguards_us\certs\access_token\public-key.pem
+      expireIn: 2 # hours
+    refresh-token:
+      private-key: D:\Workspace\java\bodyguards_us\certs\refresh_token\private-key.pem
+      public-key: D:\Workspace\java\bodyguards_us\certs\refresh_token\public-key.pem
+      expireIn: 120 # hour == 5 days
