--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,14 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+
+jwt:
+  key:
+    access-token:
+      private-key: ${ACCESS_TOKEN_PUBLIC_KEY_PATH}
+      public-key: ${ACCESS_TOKEN_PRIVATE_KEY_PATH}
+      expireIn: 2 # hour
+    refresh-token:
+      private-key: ${REFRESH_TOKEN_PUBLIC_KEY_PATH}
+      public-key: ${REFRESH_TOKEN_PRIVATE_KEY_PATH}
+      expireIn: 120 # hour == 5 days
