--- a/MockProject-ReactJS/package.json
+++ b/MockProject-ReactJS/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.19.4",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
