--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.70</version>
+        </dependency>
+
+
         <!--        MAPPING-->
         <dependency>
             <groupId>org.mapstruct</groupId>
