--- a/src/main/resources/application-pg.yml
+++ b/src/main/resources/application-pg.yml
@@ -16,12 +16,12 @@ spring:
 jwt:
   key:
     access-token:
-      private-key: classpath:certs/access_token/private-key.pem
-      public-key: classpath:certs/access_token/public-key.pem
-      expireIn: 2 # hour
+      private-key: D:\Workspace\java\bodyguards_us\certs\access_token\private_key.pem
+      public-key: D:\Workspace\java\bodyguards_us\certs\access_token\public_key.pem
+      expireIn: 2 # hours
     refresh-token:
-      private-key: classpath:certs/refresh_token/private-key.pem
-      public-key: classpath:certs/refresh_token/public-key.pem
+      private-key: D:\Workspace\java\bodyguards_us\certs\refresh_token\private_key.pem
+      public-key: D:\Workspace\java\bodyguards_us\certs\refresh_token\public_key.pem
       expireIn: 120 # hour == 5 days
 admin:
   email: admin@gmail.com
