--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,14 @@
             <version>1.70</version>
         </dependency>
 
+        <!--        Swagger -->
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
 
         <!--        MAPPING-->
         <dependency>
