--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,12 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+
+springdoc:
+  swagger-ui:
+    path: "/docs"
+    disable-swagger-default-url: true
+
 jwt:
   key:
     access-token:
