--- a/MockProject-ReactJS/package.json
+++ b/MockProject-ReactJS/package.json
@@ -13,6 +13,7 @@
     "@ant-design/cssinjs": "^1.21.0",
     "@hookform/resolvers": "^3.9.0",
     "antd": "^5.19.4",
+    "country-state-city": "^3.2.1",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
