--- a/MockProject-ReactJS/package.json
+++ b/MockProject-ReactJS/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.19.4",
     "country-state-city": "^3.2.1",
     "flowbite-react": "^0.10.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
@@ -26,6 +27,7 @@
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
+    "sweetalert2": "^11.12.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
