--- a/MockProject-NodeJS/package.json
+++ b/MockProject-NodeJS/package.json
@@ -7,8 +7,10 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   }
