--- a/src/main/resources/application-pg.yml
+++ b/src/main/resources/application-pg.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://monorail.proxy.rlwy.net:15256/railway
+    url: jdbc:postgresql://roundhouse.proxy.rlwy.net:38103/railway
     username: postgres
-    password: YTRqBsjTUBjmOlhFHifqdOkaldkqUTgn
+    password: kRmGChQEapmYlwomPeLVQpBTCHuVzOfB
     driver-class-name: org.postgresql.Driver
   jpa:
     database: postgresql
