--- a/src/main/resources/application-pg.yml
+++ b/src/main/resources/application-pg.yml
@@ -16,12 +16,12 @@ spring:
 jwt:
   key:
     access-token:
-      private-key: D:\Workspace\java\bodyguards_us\certs\access_token\private_key.pem
-      public-key: D:\Workspace\java\bodyguards_us\certs\access_token\public_key.pem
+      private-key: D:\Inter_07_2024\access_token-20240812T082145Z-001\access_token\private_key.pem
+      public-key: D:\Inter_07_2024\access_token-20240812T082145Z-001\access_token\public_key.pem
       expireIn: 2 # hours
     refresh-token:
-      private-key: D:\Workspace\java\bodyguards_us\certs\refresh_token\private_key.pem
-      public-key: D:\Workspace\java\bodyguards_us\certs\refresh_token\public_key.pem
+      private-key: D:\Inter_07_2024\refresh_token-20240812T082129Z-001\refresh_token\private_key.pem
+      public-key: D:\Inter_07_2024\refresh_token-20240812T082129Z-001\refresh_token\public_key.pem
       expireIn: 120 # hour == 5 days
 admin:
   email: admin@gmail.com
