--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,18 @@
             <version>2.2.0</version>
         </dependency>
 
+        <!--NanoId-->
+        <dependency>
+            <groupId>com.aventrix.jnanoid</groupId>
+            <artifactId>jnanoid</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <!--Mail-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <!--        MAPPING-->
         <dependency>
