--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
