--- a/pom.xml
+++ b/pom.xml
@@ -160,11 +160,12 @@
                         <palantirJavaFormat>
                             <version>2.39.0</version>
                             <style>PALANTIR</style>
-                            <formatJavadoc>false</formatJavadoc>
+                            <formatJavadoc>true</formatJavadoc>
                         </palantirJavaFormat>
                         <trimTrailingWhitespace/>
                         <endWithNewline/>
                         <removeUnusedImports/>
+                        <toggleOffOn/>
                         <formatAnnotations/>
                         <indent>
                             <tabs>true</tabs>
