--- a/src/main/resources/application-pg.yml
+++ b/src/main/resources/application-pg.yml
@@ -27,4 +27,4 @@ admin:
   email: admin@gmail.com
   password: ABCabc123@
 upload:
-  path: D:\Workspace\java\bodyguards_us\upload
+  path: D:/Workspace/java/bodyguards_us/upload
