--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <java.version>21</java.version>
         <spotless.version>2.43.0</spotless.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <maven.compiler.release>21</maven.compiler.release>
     </properties>
     <dependencies>
 
@@ -119,6 +120,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>3.0.0</version>
         </dependency>
 
         <!--        TESTING -->
