--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,31 +1,11 @@
 spring:
   datasource:
-    url: jdbc:sqlserver://localhost:1433;trustServerCertificate=true;databaseName=bodyguard
-    username: NTTH
-    password: 123456789
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
   jpa:
-    database: sql_server
+    database: postgresql
     generate-ddl: true
     hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
-jwt:
-  key:
-    access-token:
-      private-key: D:\Inter_07_2024\access_token-20240812T082145Z-001\access_token\private_key.pem
-      public-key: D:\Inter_07_2024\access_token-20240812T082145Z-001\access_token\public_key.pem
-      expireIn: 2 # hours
-    refresh-token:
-      private-key: D:\Inter_07_2024\refresh_token-20240812T082129Z-001\refresh_token\private_key.pem
-      public-key: D:\Inter_07_2024\refresh_token-20240812T082129Z-001\refresh_token\public_key.pem
-      expireIn: 120 # hour == 5 days
-admin:
-  email: admin@gmail.com
-  password: 12345678
-
-upload:
-  path: D:\Workspace\java\bodyguards_us\upload
+      ddl-auto: create
