--- a/MockProject-ReactJS/package.json
+++ b/MockProject-ReactJS/package.json
@@ -13,6 +13,7 @@
     "@ant-design/cssinjs": "^1.21.0",
     "@hookform/resolvers": "^3.9.0",
     "antd": "^5.19.4",
+    "axios": "^1.7.4",
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.12",
     "flowbite-react": "^0.10.1",
