--- a/MockProject_Laravel/.gitignore
+++ b/MockProject_Laravel/.gitignore
@@ -1,9 +1,9 @@
-#/node_modules
+/node_modules
 /public/hot
 /public/storage
 /storage/*.key
-#/vendor
-#.env
+/vendor
+.env
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
