--- a/MockProject-NodeJS/package.json
+++ b/MockProject-NodeJS/package.json
@@ -6,6 +6,7 @@
     "googleapis": "^142.0.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.3"
   }
 }
