--- a/MockProject-ReactJS/package.json
+++ b/MockProject-ReactJS/package.json
@@ -17,6 +17,8 @@
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.12",
     "flowbite-react": "^0.10.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
